[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentzero"
version = "0.1.0"
description = "AI agent powered by Claude Opus 4.6"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
agentzero = "agentzero.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
